--- a/redis/.env
+++ b/redis/.env
@@ -1,3 +1,3 @@
-REDIS_PW = amZ1aexhad61DWAa1ZWvqXct6j7bya2s
-REDIS_HOST = redis-18091.c91.us-east-1-3.ec2.cloud.redislabs.com
-REDIS_PORT = 18091
+REDIS_PW = 
+REDIS_HOST = 
+REDIS_PORT = 
